tests/transpiler/x/swift/partial_application.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden4158401135/016/main.swift:10:17: error: missing argument for parameter #2 in call
 5 |     return String(s[si..<ei])
 6 | }
 7 | func add(_ a: Int, _ b: Int) -> Int {
   |      `- note: 'add' declared here
 8 |     return (a + b)
 9 | }
10 | let add5 = add(5)
   |                 `- error: missing argument for parameter #2 in call
11 | print(add5(3))
12 | 
