tests/transpiler/x/swift/partial_application.swift
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 20:00:23 GMT+7
func substring(_ s: String, _ start: Int, _ end: Int) -> String {
    let si = s.index(s.startIndex, offsetBy: start)
    let ei = s.index(s.startIndex, offsetBy: end)
    return String(s[si..<ei])
}
func add(_ a: Int, _ b: Int) -> Int {
    return (a + b)
}
let add5 = add(5)
print(add5(3))
